[package]
name = "actorhizome"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }  #tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
async-openai = "0.10.3"
dotenv = "0.15.0"
anyhow = "1.0"
async-recursion = "1.0.4"
